[gd_scene load_steps=11 format=3 uid="uid://c4b6ax6g8wx7w"]

[ext_resource type="Script" path="res://assets/scripts/cultist_idle.gd" id="1_2q26w"]
[ext_resource type="Texture2D" uid="uid://fbxgj1q0rfmb" path="res://textures/objects/particle.png" id="2_cdgw8"]
[ext_resource type="Texture2D" uid="uid://d2wpgfn5moccc" path="res://textures/characters/cultist/cultist.png" id="2_j7q04"]

[sub_resource type="Gradient" id="Gradient_18qlw"]
offsets = PackedFloat32Array(0.663934, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hfmws"]
gradient = SubResource("Gradient_18qlw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5fm4d"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector3(0, 0, 0)
initial_velocity_min = -100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
color_ramp = SubResource("GradientTexture1D_hfmws")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_duuep"]
size = Vector2(20, 57)

[sub_resource type="SpriteFrames" id="SpriteFrames_pmdv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j7q04")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hxmxs"]
size = Vector2(30, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vu40t"]
size = Vector2(20, 3)

[node name="CultistIdle" type="CharacterBody2D" groups=["cultist", "puffTarget", "riding"]]
collision_mask = 19
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("1_2q26w")
metadata/enemy = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.843137, 0, 0, 1)
position = Vector2(-0.5147, -0.176777)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_5fm4d")
texture = ExtResource("2_cdgw8")
lifetime = 0.5
speed_scale = 0.35

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3.5)
shape = SubResource("RectangleShape2D_duuep")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pmdv0")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_hxmxs")

[node name="EyeSight" type="CanvasGroup" parent="."]

[node name="EyeSight1" type="RayCast2D" parent="EyeSight"]
position = Vector2(0, -32)
target_position = Vector2(272, -16)
collision_mask = 147

[node name="EyeSight2" type="RayCast2D" parent="EyeSight"]
position = Vector2(0, -16)
target_position = Vector2(288, 0)
collision_mask = 147

[node name="EyeSight3" type="RayCast2D" parent="EyeSight"]
position = Vector2(4, 0)
target_position = Vector2(268, 16)
collision_mask = 147

[node name="EyeSightBack" type="RayCast2D" parent="EyeSight"]
position = Vector2(-16, 0)
scale = Vector2(1, 8)
target_position = Vector2(-64, 0)
collision_mask = 147

[node name="TopCol" type="CharacterBody2D" parent="." groups=["strong"]]
position = Vector2(0, -28)
collision_mask = 16
metadata/enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCol"]
position = Vector2(-1, -2.5)
shape = SubResource("RectangleShape2D_vu40t")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="input_event" from="Hitbox" to="." method="_on_hitbox_input_event"]
